マーカーデザイン変更

--- a/app/views/nurseries/show.html.erb
+++ b/app/views/nurseries/show.html.erb
@@ -1,6 +1,5 @@
 <div class="body-content">
 
-
   <div class="show-header">
     <div class="f cate-logo">
       <p class="h3 cate"><%= @nursery.category %></p>
@@ -140,72 +139,27 @@
   </div>
 </div>
 
-<!-- <script type="text/javascript">
-
-let map;
-let marker = [];
-let infoWindow = [];
-let markerData = [
-
-<%# if  user_signed_in? %>
-  {
-      name: '<%= @user.name %>',
-      lat: <%= @user.latitude %>,
-      lng: <%= @user.longitude %>,
-      // ico: 'assets/icon.png'
- },
-<%# end %>
-
-  {
-      name: '<%= @nursery.name %>',
-      lat: <%= @nursery.latitude %>,
-      lng: <%= @nursery.longitude %>,
-      // ico: 'assets/icon2.png'
-  }
-
-];
-
-function initMap() {
- // 地図の作成
-    let mapLatLng = new google.maps.LatLng({lat: markerData[0]['lat'], lng: markerData[0]['lng']});
-    map = new google.maps.Map(document.getElementById('map2'), {
-    center: mapLatLng,
-    zoom: 14
-   });
-
- // マーカー毎の処理
- for (let i = 0; i < markerData.length; i++) {
-        // let image = ({
-        //             url: markerData[i].ico,
-        //             scaledSize: new google.maps.Size(50,50)
-        //             });
-        markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']});
-        marker[i] = new google.maps.Marker({
-                                            position: markerLatLng,
-                                            map: map,
-                                            // icon: image
-                                           });
-
-     infoWindow[i] = new google.maps.InfoWindow({
-                                                 content: '<div class="map2">' + markerData[i]['name'] + '</div>'
-                                               });
-
-     markerEvent(i); // マーカーにクリックイベントを追加
- }
-}
-// マーカーにクリックイベントを追加
-function markerEvent(i) {
-    marker[i].addListener('click', function() { // マーカーをクリックしたとき
-    infoWindow[i].open(map, marker[i]); // 吹き出しの表示
-  });
-}
-</script> -->
-
 
 <script type="text/javascript">
 let startLatLng = [<%= @user.latitude %>, <%= @user.longitude %>];
 let targetLatLng = [<%= @nursery.latitude %>, <%= @nursery.longitude %>];
-let goalMarkerImg = 'assets/icon5.png';
+let startMarkerImg = '/assets/icon.png';
+let invisibleMarkerImg = '/assets/noicon.png';
+
+<% if @nursery.category == '認可' %>
+  let goalMarkerImg = '/assets/icon2.png';
+
+<% elsif @nursery.category == '認証' %>
+  let goalMarkerImg = '/assets/icon3.png';
+
+<% elsif @nursery.category == '認可外' %>
+  let goalMarkerImg = '/assets/icon4.png';
+
+<% else @nursery.category == 'その他' %>
+  let goalMarkerImg = '/assets/icon5.png';
+
+<% end %>
+
 let map;
 function initMap() {
     // ルート検索の条件
@@ -218,7 +172,7 @@ function initMap() {
 
     // マップの生成
     let map = new google.maps.Map(document.getElementById("map2"), {
-        center: new google.maps.LatLng(startLatLng[0], startLatLng[1]), // マップの中心
+        center: new google.maps.LatLng(targetLatLng[0], targetLatLng[1]), // マップの中心
         zoom: 14 // ズームレベル
     });
 
@@ -226,8 +180,10 @@ function initMap() {
     let r = new google.maps.DirectionsRenderer({ // ルート描画オブジェクト
         map: map, // 描画先の地図
         preserveViewport: true, // 描画後に中心点をずらさない
-        // suppressMarkers: true 
+        suppressMarkers: true
     });
+
+
     // ルート検索
     d.route(request, function(result, status){
         if (status == google.maps.DirectionsStatus.OK) {
@@ -239,9 +195,73 @@ function initMap() {
             result.routes[0].legs[0].end_address = '<%= @nursery.name %>' + '  【家からの距離：' + dist + ' /所要時間(徒歩)：'+ time +' 】';
             r.setMap(map);
             r.setDirections(result);
+
+            let leg = result.routes[0].legs[0];
+            targetMakeMarker(leg.end_location, map);
+            startMakeMarker(leg.start_location, map);
+
+            infoWindow = new google.maps.InfoWindow({
+                                                 content: '<div class="map">' + '<%= @nursery.name %>' + '  【家からの距離：' + dist + ' /所要時間(徒歩)：'+ time +' 】' + '</div>'
+                                               });
+            markerEvent(map);
         }
     });
 }
+
+
+function targetMakeMarker(position, map) {
+  let marker = new google.maps.Marker({
+    position: position,
+    map: map,
+    icon:  new google.maps.MarkerImage(
+    invisibleMarkerImg, // 画像のパス
+    new google.maps.Size(1, 1), // マーカーのwidth,height
+    new google.maps.Point(0, 0), // 画像データの中で、どの部分を起点として表示させるか
+    new google.maps.Point(12, 33), // マーカーのpositionで与えられる緯度経度を画像のどの点にするか
+    new google.maps.Size(1, 1))
+  });
+}
+
+function startMakeMarker(position, map) {
+  let marker = new google.maps.Marker({
+    position: position,
+    map: map,
+    icon:  new google.maps.MarkerImage(
+    startMarkerImg, // 画像のパス
+    new google.maps.Size(40, 40), // マーカーのwidth,height
+    new google.maps.Point(0, 0), // 画像データの中で、どの部分を起点として表示させるか
+    new google.maps.Point(12, 33), // マーカーのpositionで与えられる緯度経度を画像のどの点にするか
+    new google.maps.Size(40, 40)),
+  });
+}
+
+function markerEvent(map) {
+    let image = ({
+                    url: goalMarkerImg,
+                    scaledSize: new google.maps.Size(40,40)
+                    });
+   let markerLatLng = new google.maps.LatLng({lat:<%= @nursery.latitude %>, lng: <%= @nursery.longitude %>});
+   let marker = new google.maps.Marker({
+                                    position: markerLatLng,
+                                    map: map,
+                                    icon: image
+                                   });
+  console.log(marker)
+    marker.addListener('click', function() { // マーカーをクリックしたとき
+    infoWindow.open(map, marker); // 吹き出しの表示
+  });
+}
+// let markers = {
+//   goalMarker: new google.maps.MarkerImage(
+//     goalMarkerImg, // 画像のパス
+//     new google.maps.Size(24, 33), // マーカーのwidth,height
+//     new google.maps.Point(0, 0), // 画像データの中で、どの部分を起点として表示させるか
+//     new google.maps.Point(12, 33), // マーカーのpositionで与えられる緯度経度を画像のどの点にするか
+//     new google.maps.Size(24, 33)) // 画像の大きさを拡大縮小
+// };
+
+
+initMap()
 
 
 
