--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,12 +83,17 @@ button{
   width:100%;
   height:120px;
   background-color:#fff;
-  position: fixed;
+  // position: fixed;
   z-index:5;
 }
-.header-area{
-  height:120px;
+.header-n{
+  display:none;
 }
+.header-area{
+  // height:120px;
+}
+// ↑headerの固定のために作ったdivとclass
+
 .header-content{
   width:1080px;
   margin:0 auto;
@@ -245,20 +250,12 @@ button{
 }
 
 .search-box{
-  // width:450px;
-  position:relative;
-  margin:5px 30px;
-  float:left;
-  // margin-bottom:20px;
-  // padding:27px;
+  margin:5px 0;
 }
 .sbox{
   height:50px;
   padding:0 10px;
   float:left;
-  // position:absolute;
-  // left:0;
-  // top:0;
   width:250px;
   border-radius:25px 0 0 25px;
   border:solid 2.5px #eaeaea;
@@ -268,11 +265,7 @@ button{
   height:50px;
   padding:0 10px;
   float:left;
-  // position:absolute;
-  // right:1;
-  // top:0;
   width:100px;
-  // border-radius:25px;
   border:none;
   border-top:solid 2.5px #eaeaea;
   border-bottom:solid 2.5px #eaeaea;
@@ -283,9 +276,6 @@ button{
   padding:0 10px;
   display:block;
   float:left;
-  // position: absolute;
-  // left:350px;
-  // top: 0;
   background:#7fbfff;
   color:#fff;
   border:none;
@@ -301,35 +291,9 @@ color:#7fbfff;
 
 .mushimegane{
   position: absolute;
-  left:370px;
+  left:380px;
   top: 18px;
 }
-
-
-/* タブレット横置き(1024px)程度の大きさ以下に適用される設定です */
-@media screen and (max-width:1024px) {
-  .header-content{
-    width:100%;
-  }
-  .body-content{
-    width:100%;
-  }
-}
-
-/* タブレット縦置きサイズ(768px)程度の画面の大きさ以下に適用される設定です */
-@media screen and (max-width:768px) {
-  .social i {
-    color: red;
-    }
-}
-
-/* スマートフォンサイズ(425px)程度の画面の大きさ以下に適用される設定です */
-@media screen and (max-width:425px) {
-.social i {
-    color: blue;
-    }
-}
-
 
 
 /*メインの幅---------------------------------------*/
@@ -367,17 +331,17 @@ color:#7fbfff;
 }
 
 /*サイトバー----------------------------------------------------------*/
-.sidebar-box{
-  margin:30px 0;
-}
-.side-list{
-  list-style-type: none;
-  line-height:30px;
-}
-.side-item{
-  margin:0 10px;
-  display:block;
-}
+// .sidebar-box{
+//   margin:30px 0;
+// }
+// .side-list{
+//   list-style-type: none;
+//   line-height:30px;
+// }
+// .side-item{
+//   margin:0 10px;
+//   display:block;
+// }
 /*メインコンテンツ--------------------------------------------*/
 .nursery-area{
   width:100%;
@@ -433,40 +397,40 @@ color:#7fbfff;
 }
 
 /*チェックボックス--------------------------------*/
-.checkbox01-input{
-  display: none;
-}
-.checkbox01-parts{
-  padding-left: 20px;
-  position:relative;
-  margin-right: 20px;
-}
-.checkbox01-parts::before{
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #999;
-  border-radius: 4px;
-}
-.checkbox01-input:checked + .checkbox01-parts{
-  color: #009a9a;
-}
-.checkbox01-input:checked + .checkbox01-parts::after{
-  content: "";
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: 5px;
-  width: 7px;
-  height: 14px;
-  transform: rotate(40deg);
-  border-bottom: 3px solid #009a9a;
-  border-right: 3px solid #009a9a;
-}
+// .checkbox01-input{
+//   display: none;
+// }
+// .checkbox01-parts{
+//   padding-left: 20px;
+//   position:relative;
+//   margin-right: 20px;
+// }
+// .checkbox01-parts::before{
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 15px;
+//   height: 15px;
+//   border: 1px solid #999;
+//   border-radius: 4px;
+// }
+// .checkbox01-input:checked + .checkbox01-parts{
+//   color: #009a9a;
+// }
+// .checkbox01-input:checked + .checkbox01-parts::after{
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   top: -5px;
+//   left: 5px;
+//   width: 7px;
+//   height: 14px;
+//   transform: rotate(40deg);
+//   border-bottom: 3px solid #009a9a;
+//   border-right: 3px solid #009a9a;
+// }
 
 /*保育園詳細------------------------------------*/
 .show-header{
@@ -666,6 +630,13 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   padding: 0.5em 1em;
   border: double 5px #4ec4d3;
 }
+
+.sidebar-wide {
+  display:block;
+  }
+.sidebar-narrow {
+   display:none;
+}
 /*user-show edit*/
 .prof-head{
   position:relative;
@@ -780,23 +751,91 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   width:225px;
 }
 
+// スポット登録、編集、一覧画面
+
+.spot-new{
+  margin:40px 0;
+}
+.spot-new-list1{
+  width:20%;
+  float:left;
+}
+.spot-new-list2{
+  width:20%;
+  float:left;
+}
+.spot-new-list3{
+  width:20%;
+  float:left;
+}
+.spot-new-list4{
+  width:20%;
+  float:left;
+}
+.spot-new-list4{
+  width:20%;
+  float:left;
+}
+
+
 /* タブレット横置き(1024px)程度の大きさ以下に適用される設定です */
 @media screen and (max-width:1024px) {
-  .social i {
-    color: green;
-    }
+  .header-content{
+    width:100%;
+  }
+  .body-content{
+    width:100%;
+  }
 }
 
 /* タブレット縦置きサイズ(768px)程度の画面の大きさ以下に適用される設定です */
-@media screen and (max-width:768px) {
-  .social i {
-    color: red;
+@media screen and (max-width:992px) {
+  .sidebar-wide {
+    display:none;
+    }
+  .sidebar-narrow {
+    display:block;
     }
 }
 
 /* スマートフォンサイズ(425px)程度の画面の大きさ以下に適用される設定です */
 @media screen and (max-width:425px) {
-.social i {
-    color: blue;
-    }
+
+  .logo-box{
+  float:none;
+}
+
+.list{
+  float:none;
+}
+
+.header{
+  display:none;
+}
+.header-n{
+  display:block;
+  height:150px;
+}
+
+.n-box{
+  width:100%;
+  height:100px;
+  background-color: #fff;
+}
+
+.n-nav{
+  margin-bottom:200px;
+}
+.test1{
+  background-color: red;
+  height:100px;
+}
+.test2{
+   background-color: blue;
+   height:100px;
+}
+.test3{
+   background-color: yellow;
+   height:100px;
+}
 }
