--- a/app/views/list_items/index.html.erb
+++ b/app/views/list_items/index.html.erb
@@ -1,40 +1,40 @@
 <div class="body-content">
   <div class="container-fluid">
     <div class="row">
-
-      <div class="list-content">
         <div class="list-head">
           <h2 class="h2">マイリスト</h2>
         </div>
 
-      <div class="col-sm-3 sidebar">
-        <h3 class="h3 memo">Memo</h3>
+        <div class="col-md-4 sidebar-wide">
+          <h3 class="h3 memo">Memo</h3>
 
-        <% if @memo1.present? %>
+          <% if @memo1.present? %>
 
-          <div class="memo-box">
-            <%= form_for(@memo1) do |f| %>
-              <%= f.hidden_field :user_id, :value => current_user.id %>
-              <%= f.text_area :body, class: "memo-form" %>
-              <div>
-                <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
-              </div>
+            <div class="memo-box">
+              <%= form_for(@memo1) do |f| %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+                <%= f.text_area :body, class: "memo-form" %>
+                <div>
+                  <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
+                </div>
 
-            <% end %>
-          </div>
-        <% else %>
-          <div class="memo-box">
-            <%= form_for(@memo2) do |f| %>
-              <%= f.hidden_field :user_id, :value => current_user.id %>
-              <%= f.text_area :body, size: "35x10", class: "" %>
-              <div>
-                <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-        <div class="col-sm-9">
+              <% end %>
+            </div>
+          <% else %>
+            <div class="memo-box">
+              <%= form_for(@memo2) do |f| %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+                <%= f.text_area :body, size: "35x10", class: "" %>
+                <div>
+                  <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+
+
+        <div class="col-md-8 col-sm-12">
           <div class="list-a-box">
           <a class="list-a" href="">並べ替え</a>
         </div>
@@ -67,8 +67,33 @@
             </tbody>
           </table>
         </div>
-      </div>
+        <div class="col-sm-12 sidebar-narrow">
+          <h3 class="h3 memo">Memo</h3>
 
-    </div>
+          <% if @memo1.present? %>
+
+            <div class="memo-box">
+              <%= form_for(@memo1) do |f| %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+                <%= f.text_area :body, class: "memo-form" %>
+                <div>
+                  <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
+                </div>
+
+              <% end %>
+            </div>
+          <% else %>
+            <div class="memo-box">
+              <%= form_for(@memo2) do |f| %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+                <%= f.text_area :body, size: "35x10", class: "" %>
+                <div>
+                  <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
   </div>
 </div>
