--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -8,28 +8,28 @@
 
         <div class="nursery-area">
           <div class="row nursery-area-head">
-              <div class="col-sm-2">保育園名</div>
-              <div class="col-sm-1">カテゴリ</div>
-              <div class="col-sm-4">住所</div>
-              <div class="col-sm-3">最寄り駅</div>
-              <div class="col-sm-2">電話番号</div>
+              <div class="col-xs-2">保育園名</div>
+              <div class="col-xs-1">カテゴリ</div>
+              <div class="col-xs-4">住所</div>
+              <div class="col-xs-3">最寄り駅</div>
+              <div class="col-xs-2">電話番号</div>
           </div>
           <% @nurseries.each do |nursery| %>
             <%= link_to nurseries_path(nursery) do %>
               <div class="row nursery-area-list">
-                <div class="col-sm-2">
+                <div class="col-xs-2">
                   <%= nursery.name %>
                 </div>
-                <div class="col-sm-1">
+                <div class="col-xs-1">
                   <%= nursery.category %>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                   <%= nursery.address %>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-xs-3">
                   <%= nursery.nearest %>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xs-2">
                   <%= nursery.phone %>
                 </div>
               </div>
@@ -125,11 +125,13 @@ function initMap() {
                     scaledSize: new google.maps.Size(50,50)
                     });
         markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']});
+        console.log(markerLatLng)
         marker[i] = new google.maps.Marker({
                                             position: markerLatLng,
                                             map: map,
                                             icon: image
                                            });
+        console.log(marker)
 
      infoWindow[i] = new google.maps.InfoWindow({
                                                  content: '<div class="map">' + markerData[i]['name'] + '</div>'
