--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,19 +1,16 @@
-<header class="header-n">
+<header class="header-nn">
 
-<div class="test1">
-      <%= link_to root_path do %>
+<!-- <div class="test1"> -->
     <div class="n-box">
       <div class="logo-box">
+        <%= link_to root_path do %>
         <p class="header-logo">WithYou</p>
+        <% end %>
       </div>
     </div>
-    <% end %>
-</div>
- <div class="test2">
-  
-</div>
- <div class="test3">
-      <div class="n-box n-nav">
+<!-- </div> -->
+<!-- <div class="test2"> -->
+  <div class="n-box n-nav">
     <% if  user_signed_in? %>
       <nav>
         <ul class="list">
@@ -29,7 +26,9 @@
             <!-- マイページ -->
             <%= link_to " ", user_path(current_user.id), class: "item-a a3 fas fa-user" %>
           </li>
-          <li class="mypage-li"><%= link_to "ログアウト", users_sign_out_path, method: :delete, class: "fas fa-sign-out-alt mypage-a" %></li>
+          <li class="item">
+            <%= link_to "", users_sign_out_path, method: :delete, class: "item-a a9 fas fa-sign-out-alt" %>
+          </li>
         </ul>
       </nav>
 
@@ -73,22 +72,119 @@
 
     <% end %>
     </div>
-
-</div>
-
-
-
-    <div class="n-box">
+<!--   </div> -->
+<!-- <div class="test3"> -->
+    <div class="search-box">
       <%= search_form_for(@search,:url => { :controller => :nurseries, :action => :index } ) do |f| %>
         <%= f.search_field :name_or_address_or_nearest_or_category_cont, class: "sbox", placeholder: '保育園名、住所、最寄り駅で検索' %>
-        <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外","その他" => "その他"}, {include_blank: true}, {class: 'sbox btn btn-default'} %>
+        <div class="radio-button">
+          <label><%= f.radio_button :category_eq, "認可", class: "checkbox01-input" %><span class="checkbox01-parts p1">認可</span></label>
+          <label><%= f.radio_button :category_eq, "認証", class: "checkbox01-input" %><span class="checkbox01-parts p1">認証</span></label>
+          <label><%= f.radio_button :category_eq, "認可外", class: "checkbox01-input" %><span class="checkbox01-parts">認可外</span></label>
+        </div>
         <%= f.submit '', :class =>"sbtn" %>
         <i class="fas fa-search mushimegane"></i>
       <% end %>
     </div>
+<!-- </div> -->
 
 
 
+<!-- <div class="sukima">
+
+</div> -->
+</header>
+
+
+<header class="header-n">
+
+<!-- <div class="test1"> -->
+    <div class="n-box">
+      <div class="logo-box">
+        <%= link_to root_path do %>
+        <p class="header-logo">WithYou</p>
+        <% end %>
+      </div>
+    </div>
+<!-- </div> -->
+<!-- <div class="test2"> -->
+  <div class="n-box n-nav">
+    <% if  user_signed_in? %>
+      <nav>
+        <ul class="list">
+          <li class="item">
+            <!-- スポット登録 -->
+            <%= link_to " ", spots_path, class: "item-a a1 fas fa-map-marker-alt" %>
+          </li>
+          <li class="item">
+            <!-- マイリスト -->
+            <%= link_to " ",list_items_path(current_user), class: "item-a a2 fas fa-heart" %>
+          </li>
+          <li class="item mypage">
+            <!-- マイページ -->
+            <%= link_to " ", user_path(current_user.id), class: "item-a a3 fas fa-user" %>
+          </li>
+          <li class="item">
+            <%= link_to "", users_sign_out_path, method: :delete, class: "item-a a9 fas fa-sign-out-alt" %>
+          </li>
+        </ul>
+      </nav>
+
+    <% elsif  admin_signed_in? %>
+
+      <nav class="header-right">
+        <ul class="list">
+          <li class="item">
+            <!-- 保育園の追加 -->
+            <%= link_to "",new_nurseries_path, class: "item-a a7 fas fa-home" %>
+          </li>
+          <li class="item">
+            <!-- ユーザー 一覧 -->
+            <%= link_to "", users_path, class: "item-a a8 fas fa-users" %>
+          </li>
+          <li class="item">
+            <!-- ログアウト -->
+            <%= link_to "", destroy_admin_session_path, method: :delete, class: "item-a a9 fas fa-sign-out-alt" %>
+          </li>
+        </ul>
+      </nav>
+
+    <% else %>
+
+      <nav class="header-right">
+        <ul class="list">
+          <li class="item">
+            <!-- ログイン -->
+            <%= link_to " ", new_user_session_path, class: "item-a a4 fas fa-sign-in-alt" %>
+          </li>
+          <li class="item">
+            <!-- 新規登録 -->
+            <%= link_to " ", new_user_registration_path, class: "item-a a5 fas fa-user-plus" %>
+          </li>
+          <li class="item">
+            <!-- about -->
+            <%= link_to " ","#", class: "item-a a6 fas fa-book" %>
+          </li>
+        </ul>
+      </nav>
+
+    <% end %>
+    </div>
+<!--   </div> -->
+<!-- <div class="test3"> -->
+    <div class="n-box search-box">
+      <%= search_form_for(@search,:url => { :controller => :nurseries, :action => :index } ) do |f| %>
+        <%= f.search_field :name_or_address_or_nearest_or_category_cont, class: "sbox", placeholder: '保育園名、住所、最寄り駅で検索' %>
+        <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
+        <%= f.submit '', :class =>"sbtn" %>
+        <i class="fas fa-search mushimegane"></i>
+      <% end %>
+    </div>
+<!-- </div> -->
+
+<!-- <div class="sukima">
+
+</div> -->
 </header>
 
 
@@ -102,24 +198,24 @@
   <div class="header-content row">
 
     <%= link_to root_path do %>
-    <div class="col-md-2">
+    <div class="h-box col-md-2">
       <div class="logo-box">
         <p class="header-logo">WithYou</p>
       </div>
     </div>
 
     <% end %>
-    <div class="search-box col-md-5">
+    <div class="h-box search-box col-md-5">
       <%= search_form_for(@search,:url => { :controller => :nurseries, :action => :index } ) do |f| %>
         <%= f.search_field :name_or_address_or_nearest_or_category_cont, class: "sbox", placeholder: '保育園名、住所、最寄り駅で検索' %>
 
-        <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外","その他" => "その他"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
+        <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
         <%= f.submit '', :class =>"sbtn" %>
         <i class="fas fa-search mushimegane"></i>
       <% end %>
     </div>
 
-    <div class="nav-box col-md-5">
+    <div class="h-box nav-box col-md-5">
 
     <% if  user_signed_in? %>
 
