--- a/app/views/prices/new.html.erb
+++ b/app/views/prices/new.html.erb
@@ -1,4 +1,4 @@
-<div class="body-content">
+<!-- <div class="body-content">
 	<p>週５、一日10時間利用の場合の料金を入力してください。</p>
 
 <%= form_for(@price) do |f| %>
@@ -36,4 +36,4 @@
 	</div>
 <% end %>
 
-</div>
+</div> -->
