--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header' %>
+
 <div class="body-content">
   <h2 class="h2 prof-head">プロフィール編集</h2>
   <div class="container-fluid">
