--- a/app/views/list_items/index.html.erb
+++ b/app/views/list_items/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header' %>
+
 <div class="body-content">
   <div class="container-fluid">
     <div class="row">
@@ -24,7 +26,7 @@
             <div class="memo-box">
               <%= form_for(@memo2) do |f| %>
                 <%= f.hidden_field :user_id, :value => current_user.id %>
-                <%= f.text_area :body, size: "35x10", class: "" %>
+                <%= f.text_area :body, size: "35x10", class: "memo-form" %>
                 <div>
                   <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
                 </div>
@@ -41,12 +43,13 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th>並び順</th>
-                <th>保育園名</th>
-                <th></th>
-                <th>所在地</th>
-                <th>電話番号</th>
-                <th></th>
+                <th class="col-lg-1">並び順</th>
+                <th class="col-lg-1"></th>
+                <th class="col-lg-3">保育園名</th>
+                <th class="col-lg-1"></th>
+                <th class="col-lg-3">所在地</th>
+                <th class="col-lg-2">電話番号</th>
+                <th class="col-lg-1"></th>
               </tr>
             </thead>
             <tbody>
@@ -54,7 +57,8 @@
               <% @list_items.each do |list_item| %>
               <%= form_for(list_item) do |f| %>
               <tr>
-                <td><%=f.text_field :row_order %><%= f.submit %></td>
+                <td><%= f.text_field :row_order, class: "roworder" %></td>
+                <td><%= f.submit "保存", class: "btn btn-xs btn-info" %></td>
                 <td><%= link_to list_item.nursery.name, nurseries_path(list_item.nursery.id) %></td>
                 <td><%= list_item.nursery.category %></td>
                 <td><%= list_item.nursery.address %></td>
@@ -86,7 +90,7 @@
             <div class="memo-box">
               <%= form_for(@memo2) do |f| %>
                 <%= f.hidden_field :user_id, :value => current_user.id %>
-                <%= f.text_area :body, size: "35x10", class: "" %>
+                <%= f.text_area :body, size: "35x10", class: "memo-form" %>
                 <div>
                   <%= f.submit "　保存　", class: "btn btn-sm btn-info" %>
                 </div>
