--- a/app/views/nurseries/new.html.erb
+++ b/app/views/nurseries/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header' %>
+
 <div class="body-content">
 
 <%= form_for(@nursery,:url => { :controller => :nurseries, :action => :create } ) do |f| %>
