--- a/app/views/prices/edit.html.erb
+++ b/app/views/prices/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="body-content">
+<!-- <div class="body-content">
 	<p><%= @nursery.name %></p>
 	<p>週５、一日10時間利用の場合の料金を入力してください。</p>
 
@@ -35,4 +35,4 @@
 	</div>
 <% end %>
 
-</div>
+</div> -->
