バリデーション、登録フォーム修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -574,6 +574,19 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .price-th{
   width:25%;
 }
+
+// 保育園新規追加・編集
+.n-form{
+  margin-top:50px;
+}
+.n-check{
+  margin-left:30px;
+}
+.check-span{
+  font-size:13px;
+  font-weight:600;
+}
+
 /*マイリスト一覧　list-item/index*/
 .list-head{
   position:relative;
