--- a/app/views/nurseries/show.html.erb
+++ b/app/views/nurseries/show.html.erb
@@ -36,6 +36,8 @@
 
   <div class="container-fluid">
     <div class="row show-main">
+
+      <% if admin_signed_in? %>
       <div class="col-sm-8 main-content">
 
         <div class="map-area">
@@ -46,11 +48,12 @@
           <%= link_to "  削除する  ",nurseries_path(@nursery), method: :delete, data: { confirm:'本当に削除しますか？'}, class:"btn btn-lg btn-danger"%>
         </div>
       </div>
+      <% end %>
 
       <div class="col-sm-4 sidebar">
         <div class="tell-box">
           <a class="tell fas fa-phone" href="tel:<%= @nursery.phone %>"><%= @nursery.phone %></a>
-          <!-- スマホのときのみ発信できるように書き換える -->
+          <!-- スマホのときのみ発信できるように書き換える? -->
         </div>
         <div class="address-box box ohana">
           <table class="box-table">
@@ -103,7 +106,7 @@
             <thead>
               <tr>
                 <th ></th>
-                <th class="center-text">例)週5/1日10時間の場合</th>
+                <th class="center-text"><%= price.title %></th>
               </tr>
               <tr>
                 <th class="price-th center-text">０歳</th>
@@ -141,7 +144,7 @@
   </div>
 </div>
 
-
+<% if user_signed_in? %>
 <% if current_user.address.present? %><!-- ユーザーの住所があるとき -->
 
 <script type="text/javascript">
@@ -321,5 +324,55 @@ function initMap() {
 }
 </script>
 <% end %><!-- ユーザー住所の有無分岐　おわり -->
+<% else %><!-- ユーザーがログインしていないとき -->
+<script type="text/javascript">
+let map;
+let marker;
+let infoWindow;
+let center = {
+  lat: <%= @nursery.latitude %>,
+  lng: <%= @nursery.longitude %>,
+
+<% if @nursery.category == '認可' %>
+  ico: '/assets/icon2.png'
+
+<% elsif @nursery.category == '認証' %>
+  ico: '/assets/icon3.png'
+
+<% elsif @nursery.category == '認可外' %>
+  ico: '/assets/icon4.png'
+
+<% else @nursery.category == 'その他' %>
+  ico: '/assets/icon5.png'
+
+<% end %>
+};
+
+function initMap() {
+ map = new google.maps.Map(document.getElementById('map2'), {
+     center: center,
+     zoom: 14
+   });
+
+ let image = ({
+                    url: center.ico,
+                    scaledSize: new google.maps.Size(50,50)
+                    });
+
+ marker = new google.maps.Marker({
+      position: center,
+      map: map,
+      icon: image
+   });
+
+ infoWindow = new google.maps.InfoWindow({
+        content: '<div class="map"><%= @nursery.name %></div>'
+  });
+ marker.addListener('click', function() {
+     infoWindow.open(map, marker);
+    });
+}
+</script>
+<% end %>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfiov9mIsmVcZyqJb-jQiTRTS_2rFY9gM&callback=initMap"></script>
